Avoid column break inside images.

--- a/app/oscitk/themes/Red/styles/_section.scss
+++ b/app/oscitk/themes/Red/styles/_section.scss
@@ -30,6 +30,10 @@
 	}
 
     img {
+    	
+    	 -webkit-column-break-inside: avoid;
+    					break-inside: avoid-column;
+
     	width: 100%;
     }
 
